server: question image and score
